kubernetes/apps/observability/kromgo/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.perry.cafe/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kromgo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kromgo
      app.kubernetes.io/name: kromgo
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: victoria-metrics
            app.kubernetes.io/name: victoria-metrics-single
            ## Namespace where external-secret lives. Can be removed if they're in the same namespace
            k8s:io.kubernetes.pod.namespace: observability
